Source/JavaScriptCore/bytecode/AccessCase.h
@@ -300,7 +300,7 @@ private:
 
     DECLARE_VISIT_AGGREGATE_WITH_MODIFIER(const);
     bool visitWeak(VM&) const;
-    template<typename Visitor> bool propagateTransitions(Visitor&) const;
+    template<typename Visitor> void propagateTransitions(Visitor&) const;
 
     // FIXME: This only exists because of how AccessCase puts post-generation things into itself.
     // https://bugs.webkit.org/show_bug.cgi?id=156456
